backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copilot-backend
spec:
  replicas: 3
  template:
    metadata:
      name: copilot-backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: vinayakyadav4017/copilot-backend:v1
          imagePullPolicy: IfNotPresent
          command: ["uvicorn","main:app","--host=0.0.0.0","--port=8000"]
  selector:
    matchLabels:
      app: backend
