backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: ClusterIP
  ports:
    - targetPort: 8000
      port: 80
  selector:
    app: backend
