frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: frontend
