ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copilot-ingress
spec:
  rules:
  - host: "copilot.app"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-end
            port:
              number: 80

  - host: "copilot-backend.app"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: back-end
            port:
              number: 80
